--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main class="sobre container">
       <div>
-        <img src="./Image/foto da loja.jpg" alt="foto da loja" />
+        <img src="./image/foto da loja.jpg" alt="foto da loja" />
       </div>
       <div>
         <h2>Sobre a Loja</h2>
